<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eee"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/outerspace"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_holder"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/lavendergray"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bills_placeholder"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textColor="@color/firebrick"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/lavendergray"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/btnAddToBasket"
            android:layout_width="match_parent"
            android:layout_height="50.0dp"
            android:layout_marginTop="24dp"
            style="@style/active_button"
            android:text="@string/btn_re_order"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            />
    </LinearLayout>

</LinearLayout>